MASSIVE (!) refactoring
- Welcome foundation layer, now j2cl compatible (using Java 8 syntax there)
  - added lots of annotations
  - Assertions
  - functional helpers (many!)
  -
- added some docs
- all POMs reworked and cleaner
- all tests use resource loading, no more files
- new testdata project for test data
- migrated to jspecify for null annotations
- add simplistic j2cl-able logger
- add j2cl doc